syntax = "proto3";
package orderApi;
option go_package = "github.com/h-varmazyar/snappfood/api/proto";
import "api/proto/src/misc.proto";

service ManagerService{
  rpc CreateOrder(ManagerCreateOrderReq) returns (api.Void);
}

message ManagerCreateOrderReq{
  // @inject_tag: json:"order_id"
  int64 OrderID = 1;
  // @inject_tag: json:"price"
  int64 Price = 2;
  // @inject_tag: json:"title"
  string Title = 3;
}